[package]
name = "skypo"
authors = ["haruki7049 <tontonkirikiri@gmail.com>"]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/haruki7049/skypo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.31"
futures-channel = "0.3.31"
futures-util = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
tokio-tungstenite = "0.26.2"
url = "2.5.4"
webrtc = "0.13.0"
